--- a/_layout/style.html
+++ b/_layout/style.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/jtd.css">
-<link rel="icon" href="/assets/favicon.png">
+<link rel="icon" href="/assets/favicon.ico">
 
 <style>
   /* #148 wrap long header */
