--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -18,6 +18,7 @@
         <li class="menu-list-item {{ispage session2/*}}active{{end}}"><a href="/session2/" class="menu-list-link {{ispage menu1}}active{{end}}">2. Exposure</a>
         <li class="menu-list-item {{ispage carbonyl/*}}active{{end}}"><a href="/carbonyl/" class="menu-list-link {{ispage menu1}}active{{end}}">3. Carbonyls</a>
         <li class="menu-list-item {{ispage magic/*}}active{{end}}"><a href="/magic/" class="menu-list-link {{ispage menu1}}active{{end}}">4. PN & O3</a>
+        <li class="menu-list-item {{ispage chamber/*}}active{{end}}"><a href="/chamber/" class="menu-list-link {{ispage menu1}}active{{end}}">5. Ozonolysis</a>
       </ul>
     </div>
     <div class="footer">
