--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -14,6 +14,7 @@
         <li class="menu-list-item {{ispage labreport/*}}active{{end}}"><a href="/labreport/" class="menu-list-link {{ispage menu1}}active{{end}}">Reports</a>
         <li class="menu-list-item {{ispage presentations/*}}active{{end}}"><a href="/presentations/" class="menu-list-link {{ispage menu1}}active{{end}}">Presentations</a>
         <li class="menu-list-item {{ispage evaluation/*}}active{{end}}"><a href="/evaluation/" class="menu-list-link {{ispage menu1}}active{{end}}">Peer Evaluation</a>
+        <li class="menu-list-item {{ispage refresher/*}}active{{end}}"><a href="/refresher/" class="menu-list-link {{ispage menu1}}active{{end}}">Refresher</a>
         <li class="menu-list-item {{ispage session1/*}}active{{end}}"><a href="/session1/" class="menu-list-link {{ispage menu1}}active{{end}}">1. Sunphotometer</a>
         <li class="menu-list-item {{ispage session2/*}}active{{end}}"><a href="/session2/" class="menu-list-link {{ispage menu1}}active{{end}}">2. Exposure</a>
         <li class="menu-list-item {{ispage carbonyl/*}}active{{end}}"><a href="/carbonyl/" class="menu-list-link {{ispage menu1}}active{{end}}">3. Carbonyls</a>
