--- a/_layout/pgwrap.html
+++ b/_layout/pgwrap.html
@@ -11,6 +11,7 @@
     <div class="menu" id="side-menu">
       <ul class="menu-list">
         <li class="menu-list-item {{ispage index}}active{{end}}"><a href="/" class="menu-list-link {{ispage index}}active{{end}}">Syllabus</a>
+        <li class="menu-list-item {{ispage safety/*}}active{{end}}"><a href="/safety/" class="menu-list-link {{ispage menu1}}active{{end}}">Safety</a>
         <li class="menu-list-item {{ispage labreport/*}}active{{end}}"><a href="/labreport/" class="menu-list-link {{ispage menu1}}active{{end}}">Reports</a>
         <li class="menu-list-item {{ispage presentations/*}}active{{end}}"><a href="/presentations/" class="menu-list-link {{ispage menu1}}active{{end}}">Presentations</a>
         <li class="menu-list-item {{ispage evaluation/*}}active{{end}}"><a href="/evaluation/" class="menu-list-link {{ispage menu1}}active{{end}}">Peer Evaluation</a>
